# sommelier-drive-cryptos

./: Cargo.toml  build.sh  cbindgen.toml  sommelier_drive_cryptos.h
examples/c_api/: Makefile
examples/c_api/src/: main.c
src/: c_api.rs  lib.rs  pk_signature.rs  pke.rs  ske.rs  traits.rs
