[package]
name = "sommelier-drive-cryptos"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa = {version = "0.7.0", default-features = false, features = ["std", "pem", "serde"]}
aes-gcm = "0.10.1" 
serde_json = "1.0"
serde = {version = "1.0.103", features = ["derive"]}
thiserror = "1.0.37"
sha2 = "0.10.6"
signature = "1.6.4"
easy_ffi = {version = "0.1.0", git = "https://github.com/SoraSuegami/easy_ffi.git", optional = true}
getrandom = { version = "0.2", features = ["js"] }
hex = {version = "0.4.3"}
errno = {version = "0.2.8", optional = true}

[dev-dependencies]
rand = "0.7.0"
rand_xorshift = "0.2"

[build-dependencies]
cbindgen = "0.24.3"

[lib]
crate-type = ["rlib","cdylib"]

[features]
default = ["c_api"]
c_api = ["easy_ffi", "errno"]
